<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">
<!--AUTHOR : https://github.com/Shah-Aayush-->
    <LinearLayout
        style="@style/BGcolor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/name"
            android:inputType="textCapWords">

            <requestFocus />
        </EditText>

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/toppings" />

        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:onClick="updatePrice"
            android:paddingLeft="16dp"
            android:text="@string/whipped_cream"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:onClick="updatePrice"
            android:paddingLeft="16dp"
            android:text="@string/chocolate"
            android:textSize="16sp" />

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/decreaseQuantity"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_toLeftOf="@id/quantity_text_view"
                android:background="@android:color/white"
                android:onClick="decrement"
                android:text="-"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:text="2"
                android:textSize="16sp" />

            <Button
                android:id="@+id/increaseQuantity"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_toRightOf="@id/quantity_text_view"
                android:background="@android:color/white"
                android:onClick="increment"
                android:text="+"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>


        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/total_price" />

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="$10.0"
            android:textSize="16sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/white"
            android:onClick="submitOrder"
            android:text="@string/order"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp" />




            <FrameLayout
                android:id="@+id/video_view_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/rounded_video_background"
                android:outlineProvider="background">
                <VideoView
                    android:id="@+id/coffee_video_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="#FEF5ED"/>
            </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="© Aayush Shah 2021"
            android:textAlignment="center"
            android:textColor="@color/teal_700" />

    </LinearLayout>


</ScrollView>